Change drive letter functionality

--- a/ImageLoader.ipynb
+++ b/ImageLoader.ipynb
@@ -932,7 +932,7 @@
     "# Subplots to plot input(s) and results\n",
     "fig, axes = plt.subplots(2, 5, figsize=(20, 5))\n",
     "\n",
-    "#Input(s)\n",
+    "# Input(s)\n",
     "for i in range(5):\n",
     "    if i < input_images_number:\n",
     "        image = Image.open(input_images[i])\n",
@@ -957,6 +957,248 @@
    "metadata": {},
    "source": [
     "# ___________________________________________________"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Path</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2051</th>\n",
+       "      <td>2052</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2052</th>\n",
+       "      <td>2053</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2053</th>\n",
+       "      <td>2054</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2054</th>\n",
+       "      <td>2055</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2055</th>\n",
+       "      <td>2056</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2056 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        ID                                               Path\n",
+       "0        1  C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...\n",
+       "1        2  C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...\n",
+       "2        3  C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...\n",
+       "3        4  C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...\n",
+       "4        5  C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...\n",
+       "...    ...                                                ...\n",
+       "2051  2052  C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...\n",
+       "2052  2053  C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...\n",
+       "2053  2054  C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...\n",
+       "2054  2055  C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...\n",
+       "2055  2056  C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...\n",
+       "\n",
+       "[2056 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Path</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2051</th>\n",
+       "      <td>2052</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2052</th>\n",
+       "      <td>2053</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2053</th>\n",
+       "      <td>2054</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2054</th>\n",
+       "      <td>2055</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2055</th>\n",
+       "      <td>2056</td>\n",
+       "      <td>C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2056 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        ID                                               Path\n",
+       "0        1  C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...\n",
+       "1        2  C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...\n",
+       "2        3  C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...\n",
+       "3        4  C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...\n",
+       "4        5  C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...\n",
+       "...    ...                                                ...\n",
+       "2051  2052  C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...\n",
+       "2052  2053  C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...\n",
+       "2053  2054  C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...\n",
+       "2054  2055  C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...\n",
+       "2055  2056  C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...\n",
+       "\n",
+       "[2056 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# It could be (depending on the respective windows configuration)\n",
+    "# that the saved path is not the actual path on another windows system\n",
+    "\n",
+    "# Change drive letter\n",
+    "old_drive_letter = 'E'\n",
+    "new_drive_letter = 'C'\n",
+    "df['Path'] = df['Path'].apply(lambda path: path.replace(f'{old_drive_letter}:', f'{new_drive_letter}:'))\n",
+    "\n",
+    "df"
    ]
   },
   {
