Decide asc/desc by similarity function

--- a/ImageLoader.ipynb
+++ b/ImageLoader.ipynb
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
        "0     188408      .jpg       {}  "
       ]
      },
-     "execution_count": 354,
+     "execution_count": 362,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 370,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 373,
    "metadata": {},
    "outputs": [
     {
@@ -899,8 +899,8 @@
       "402    403  15.827892\n",
       "\n",
       "[2056 rows x 2 columns]\n",
-      "CPU times: total: 516 ms\n",
-      "Wall time: 538 ms\n"
+      "CPU times: total: 500 ms\n",
+      "Wall time: 519 ms\n"
      ]
     },
     {
@@ -909,7 +909,7 @@
        "[1105, 1083, 1082, 1124, 13]"
       ]
      },
-     "execution_count": 355,
+     "execution_count": 373,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,13 +946,22 @@
     "    num_input_rows = len(df_input_measurements)\n",
     "    if num_input_rows > 1:   \n",
     "        similarity_results['Mean'] = similarity_results.drop(columns=['ID']).mean(axis=1)\n",
+    "        sort_column = 'Mean'\n",
     "        print(similarity_results)\n",
-    "        sorted_results = similarity_results.sort_values(by='Mean', ascending=True)\n",
     "        \n",
     "    else:\n",
+    "        sort_column = input_id\n",
     "        print(similarity_results)\n",
-    "        sorted_results = similarity_results.sort_values(by=input_id, ascending=True)\n",
     "    \n",
+    "    \n",
+    "    # Decide which sorting (asc or desc)\n",
+    "    if similarity_function in [example_similarity_function, euclidean_distance, manhattan_distance, hamming_distance]:\n",
+    "        ascending = True # ascending\n",
+    "    elif similarity_function in [cosine_similarity, jaccard_similarity]:\n",
+    "        ascending = False # descending\n",
+    "    \n",
+    "    # Sort\n",
+    "    sorted_results = similarity_results.sort_values(by=sort_column, ascending=ascending)\n",
     "    \n",
     "    print(sorted_results)\n",
     "    \n",
