Updated selection of comparison

--- a/ImageLoader.ipynb
+++ b/ImageLoader.ipynb
@@ -786,57 +786,57 @@
     "    df_input_rgb = df_input[['ID', 'RGB_Histogram']]\n",
     "    \n",
     "    if similarity == \"euclidean_distance\":\n",
-    "        similarities = euclidean_distance(df_input_rgb, rgb_df, best_n)\n",
+    "        calculate_mean_similarity(df_input_rgb, rgb_df, euclidean_distance, best_n)\n",
     "        \n",
     "    elif similarity == \"manhattan_distance\":\n",
-    "        similarities = manhattan_distance(df_input_rgb, rgb_df, best_n)\n",
+    "        calculate_mean_similarity(df_input_rgb, rgb_df, manhattan_distance, best_n)\n",
     "        \n",
     "    elif similarity == \"cosine_similarity\":\n",
-    "        similarities = cosine_similarity(df_input_rgb, rgb_df, best_n)\n",
+    "        calculate_mean_similarity(df_input_rgb, rgb_df, cosine_similarity, best_n)\n",
     "        \n",
     "    elif similarity == \"jaccard_similarity\":\n",
-    "        similarities = jaccard_similarity(df_input_rgb, rgb_df, best_n)\n",
+    "        calculate_mean_similarity(df_input_rgb, rgb_df, jaccard_similarity, best_n)\n",
     "        \n",
     "    elif similarity == \"hamming_distance\":\n",
-    "        similarities = hamming_distance(df_input_rgb, rgb_df, best_n)\n",
+    "        calculate_mean_similarity(df_input_rgb, rgb_df, hamming_distance, best_n)\n",
     "\n",
     "        \n",
     "elif measurement == \"HSV\":\n",
-    "    df_input_hsv = df_input[['ID', 'HSV_Histogram']]\n",
+    "    df_input_hsv = df_input[['ID', 'HSV_Histogram']] \n",
     "    \n",
     "    if similarity == \"euclidean_distance\":\n",
-    "        similarities = euclidean_distance(df_input_hsv, hsv_df, best_n)\n",
+    "        calculate_mean_similarity(df_input_hsv, hsv_df, euclidean_distance, best_n)\n",
     "        \n",
     "    elif similarity == \"manhattan_distance\":\n",
-    "        similarities = manhattan_distance(df_input_hsv, hsv_df, best_n)\n",
+    "        calculate_mean_similarity(df_input_hsv, hsv_df, manhattan_distance, best_n)\n",
     "        \n",
     "    elif similarity == \"cosine_similarity\":\n",
-    "        similarities = cosine_similarity(df_input_hsv, hsv_df, best_n)\n",
+    "        calculate_mean_similarity(df_input_hsv, hsv_df, cosine_similarity, best_n)\n",
     "        \n",
     "    elif similarity == \"jaccard_similarity\":\n",
-    "        similarities = jaccard_similarity(df_input_hsv, hsv_df, best_n)\n",
+    "        calculate_mean_similarity(df_input_hsv, hsv_df, jaccard_similarity, best_n)\n",
     "        \n",
     "    elif similarity == \"hamming_distance\":\n",
-    "        similarities = hamming_distance(df_input_hsv, hsv_df, best_n)\n",
+    "        calculate_mean_similarity(df_input_hsv, hsv_df, hamming_distance, best_n)\n",
     "    \n",
     "    \n",
     "elif measurement == \"Embedding\":\n",
     "    df_input_embedding = df_input[['ID', 'Model_Embedding']]\n",
     "    \n",
     "    if similarity == \"euclidean_distance\":\n",
-    "        similarities = euclidean_distance(df_input_embedding, embedding_df, best_n)\n",
+    "        calculate_mean_similarity(df_input_embedding, embedding_df, euclidean_distance, best_n)\n",
     "        \n",
     "    elif similarity == \"manhattan_distance\":\n",
-    "        similarities = manhattan_distance(df_input_embedding, embedding_df, best_n)\n",
+    "        calculate_mean_similarity(df_input_embedding, embedding_df, manhattan_distance, best_n)\n",
     "        \n",
     "    elif similarity == \"cosine_similarity\":\n",
-    "        similarities = cosine_similarity(df_input_embedding, embedding_df, best_n)\n",
+    "        calculate_mean_similarity(df_input_embedding, embedding_df, cosine_similarity, best_n)\n",
     "        \n",
     "    elif similarity == \"jaccard_similarity\":\n",
-    "        similarities = jaccard_similarity(df_input_embedding, embedding_df, best_n)\n",
+    "        calculate_mean_similarity(df_input_embedding, embedding_df, jaccard_similarity, best_n)\n",
     "        \n",
     "    elif similarity == \"hamming_distance\":\n",
-    "        similarities = hamming_distance(df_input_embedding, embedding_df, best_n)\n",
+    "        calculate_mean_similarity(df_input_embedding, embedding_df, hamming_distance, best_n)\n",
     "\n"
    ]
   },
