Cleaned image retrival and converted to functions

--- a/ImageLoader.ipynb
+++ b/ImageLoader.ipynb
@@ -46,35 +46,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "Load all image paths and get the total number of images,\n",
-    "we can't use tqdm here, because we have to determine the number of images first.\n",
-    "'''\n",
-    "\n",
     "def find_image_files(root_dir, extensions=('.jpg', '.jpeg', '.png', '.bmp', '.tiff', '.tif')):\n",
+    "    '''\n",
+    "    Load all image paths and get the total number of images,\n",
+    "    we can't use tqdm here, because we have to determine the number of images first.\n",
+    "    '''\n",
     "    image_files = []\n",
     "    \n",
     "    for subdir, dirs, files in os.walk(root_dir):\n",
     "        for file in files:\n",
     "            if file.lower().endswith(extensions):\n",
     "                image_files.append(os.path.join(subdir, file))\n",
-    "    return image_files\n",
-    "\n",
-    "\n",
-    "# here was: image_paths = find_image_files(r\"\")\n",
-    "# df_image_paths = pd.DataFrame({'ID': range(1, len(image_paths) + 1), 'Path': image_paths})\n",
-    "# df_image_paths = pd.DataFrame(image_paths, columns=[\"Path\"])\n",
-    "# df_image_paths.to_pickle('Path.pkl')\n",
-    "\n",
-    "\n",
-    "# Show first 10 paths\n",
-    "# print(f\"Number found images: {len(image_paths)}\")\n",
-    "# if len(image_paths) > 10:\n",
-    "#     print(\"Some paths:\")\n",
-    "#     for pic_path in image_paths[:10]:\n",
-    "#         print(pic_path)\n",
-    "# else:\n",
-    "#     print(\"Found paths:\", image_paths)"
+    "    return image_files"
    ]
   },
   {
@@ -111,22 +94,26 @@
     "    return hist\n",
     "\n",
     "\n",
-    "# Load the efficientnet_v2_s model\n",
-    "model = models.efficientnet_v2_s(weights=models.EfficientNet_V2_S_Weights.DEFAULT)\n",
+    "def load_embedding_model():\n",
+    "    global model, preprocess\n",
+    "    # Load the efficientnet_v2_s model\n",
+    "    model = models.efficientnet_v2_s(weights=models.EfficientNet_V2_S_Weights.DEFAULT)\n",
     "\n",
-    "# Remove last layer (classificator), because we only need the features\n",
-    "model = torch.nn.Sequential(*list(model.children())[:-1])\n",
-    "model.eval()\n",
+    "    # Remove last layer (classificator), because we only need the features\n",
+    "    model = torch.nn.Sequential(*list(model.children())[:-1])\n",
+    "    model.eval()\n",
     "\n",
-    "# Define preprocessing transformations\n",
-    "preprocess = transforms.Compose([\n",
-    "    transforms.ToPILImage(),\n",
-    "    transforms.Resize((224, 224)),\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
-    "])\n",
+    "    # Define preprocessing transformations\n",
+    "    preprocess = transforms.Compose([\n",
+    "        transforms.ToPILImage(),\n",
+    "        transforms.Resize((224, 224)),\n",
+    "        transforms.ToTensor(),\n",
+    "        transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
+    "    ])\n",
     "\n",
+    "    \n",
     "def model_embeddings_calculation(image):\n",
+    "    global model, preprocess\n",
     "    input_tensor = preprocess(image)\n",
     "    input_batch = input_tensor.unsqueeze(0)\n",
     "    \n",
@@ -139,36 +126,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20fa8d076289488abb2bd008610b3f51",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Processing images:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: total: 5min 23s\n",
-      "Wall time: 1min 12s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%time\n",
-    "\n",
-    "\n",
     "def extract_image_details(image_id, path, resize_size):\n",
     "    try:\n",
     "        image = cv2.imread(path)\n",
@@ -264,173 +225,106 @@
     "    if show_progress:\n",
     "        progress_bar.close()\n",
     "\n",
-    "        \n",
-    "        \n",
-    "# Testing: Example\n",
+    "\n",
+    "\n",
+    "def main_load_images(batch_size, desired_size):\n",
+    "    # Load checkpoint\n",
+    "    start_index, paths, rgb_hists, hsv_hists, embeddings, other_data = load_checkpoint()\n",
+    "\n",
+    "    image_paths = find_image_files(r\"C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\extra_collection\\city\")\n",
+    "    \n",
+    "    load_embedding_model()\n",
+    "\n",
+    "    for df, batch_index in image_batch_generator(image_paths, batch_size, desired_size, start_index=start_index, show_progress=True):\n",
+    "        paths.extend(df[['ID', 'Path']].values.tolist())\n",
+    "        rgb_hists.extend(df[['ID', 'RGB_Histogram']].values.tolist())\n",
+    "        hsv_hists.extend(df[['ID', 'HSV_Histogram']].values.tolist())\n",
+    "        embeddings.extend(df[['ID', 'Model_Embedding']].values.tolist())\n",
+    "        other_data.extend(df.drop(columns=['Path', 'RGB_Histogram', 'HSV_Histogram', 'Model_Embedding']).values.tolist())\n",
+    "\n",
+    "        # Save checkpoint, overrides old one and appends new data\n",
+    "        with open('checkpoint.pkl', 'wb') as f:\n",
+    "            pickle.dump((batch_index, paths, rgb_hists, hsv_hists, embeddings, other_data), f)\n",
+    "    \n",
+    "\n",
+    "    # Save results\n",
+    "    df_paths = pd.DataFrame(paths, columns=[\"ID\", \"Path\"])\n",
+    "    df_rgb = pd.DataFrame(rgb_hists, columns=[\"ID\", \"Histogram\"])\n",
+    "    df_hsv = pd.DataFrame(hsv_hists, columns=[\"ID\", \"Histogram\"])\n",
+    "    df_embeddings = pd.DataFrame(embeddings, columns=[\"ID\", \"Embedding\"])\n",
+    "    df_other_data = pd.DataFrame(other_data, columns=[\"ID\", \"Average_Color\",\n",
+    "                                                     \"Brightness\", \"Average_HSV\",\n",
+    "                                                     \"Resolution\",\"DPI\",\n",
+    "                                                     \"File_Size\", \"File_Type\",\n",
+    "                                                     \"Metadata\"\n",
+    "                                                    ])\n",
+    "\n",
+    "    df_paths.to_pickle('Path.pkl')\n",
+    "    df_rgb.to_pickle('RGB_Hist.pkl')\n",
+    "    df_hsv.to_pickle('HSV_Hist.pkl')\n",
+    "    df_embeddings.to_pickle('Embedding.pkl')\n",
+    "    df_other_data.to_pickle('Other_data.pkl')\n",
+    "\n",
+    "    # Checkpoint can be removed after program was successful\n",
+    "    if os.path.exists('checkpoint.pkl'):\n",
+    "        os.remove('checkpoint.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fa91b643bde04e7ebc9dc3f22c419b94",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Processing images:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 5min 28s\n",
+      "Wall time: 1min 12s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# Execute\n",
     "batch_size = 1000\n",
     "desired_size = (224, 224)\n",
-    "\n",
-    "\n",
-    "# Load checkpoint\n",
-    "start_index, paths, rgb_hists, hsv_hists, embeddings, other_data = load_checkpoint()\n",
-    "\n",
-    "image_paths = find_image_files(r\"C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\image_data\\extra_collection\\city\")\n",
-    "\n",
-    "for df, batch_index in image_batch_generator(image_paths, batch_size, desired_size, start_index=start_index, show_progress=True):\n",
-    "    paths.extend(df[['ID', 'Path']].values.tolist())\n",
-    "    rgb_hists.extend(df[['ID', 'RGB_Histogram']].values.tolist())\n",
-    "    hsv_hists.extend(df[['ID', 'HSV_Histogram']].values.tolist())\n",
-    "    embeddings.extend(df[['ID', 'Model_Embedding']].values.tolist())\n",
-    "    other_data.extend(df.drop(columns=['Path', 'RGB_Histogram', 'HSV_Histogram', 'Model_Embedding']).values.tolist())\n",
-    "    \n",
-    "    # Save checkpoint, overrides old one and appends new data\n",
-    "    with open('checkpoint.pkl', 'wb') as f:\n",
-    "        pickle.dump((batch_index, paths, rgb_hists, hsv_hists, embeddings, other_data), f)\n",
-    "    \n",
-    "\n",
-    "# Save results\n",
-    "df_paths = pd.DataFrame(paths, columns=[\"ID\", \"Path\"])\n",
-    "df_rgb = pd.DataFrame(rgb_hists, columns=[\"ID\", \"Histogram\"])\n",
-    "df_hsv = pd.DataFrame(hsv_hists, columns=[\"ID\", \"Histogram\"])\n",
-    "df_embeddings = pd.DataFrame(embeddings, columns=[\"ID\", \"Embedding\"])\n",
-    "df_other_data = pd.DataFrame(other_data, columns=[\"ID\", \"Average_Color\",\n",
-    "                                                 \"Brightness\", \"Average_HSV\",\n",
-    "                                                 \"Resolution\",\"DPI\",\n",
-    "                                                 \"File_Size\", \"File_Type\",\n",
-    "                                                 \"Metadata\"\n",
-    "                                                ])\n",
-    "\n",
-    "df_paths.to_pickle('Path.pkl')\n",
-    "df_rgb.to_pickle('RGB_Hist.pkl')\n",
-    "df_hsv.to_pickle('HSV_Hist.pkl')\n",
-    "df_embeddings.to_pickle('Embedding.pkl')\n",
-    "df_other_data.to_pickle('Other_data.pkl')\n",
-    "\n",
-    "# Checkpoint can be removed after program was successful\n",
-    "if os.path.exists('checkpoint.pkl'):\n",
-    "    os.remove('checkpoint.pkl')"
+    "main_load_images(batch_size, desired_size)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2056"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(df_rgb)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        ID                                          Embedding\n",
-      "2051  2052  [-0.20513535, -0.10810962, -0.23736508, -0.231...\n",
-      "2052  2053  [-0.19108932, 1.7732646, -0.20176479, -0.16974...\n",
-      "2053  2054  [-0.011624885, 0.011469968, -0.16959248, -0.23...\n",
-      "2054  2055  [-0.15407062, 0.28345406, -0.1295455, -0.14643...\n",
-      "2055  2056  [-0.18163215, 0.6147414, -0.068714134, -0.2097...\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df_embeddings.tail())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1280"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "first_histogram_length = len(df_embeddings.iloc[0]['Embedding'])\n",
-    "first_histogram_length"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        ID                                          Histogram\n",
-      "2051  2052  [0.04886454, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0...\n",
-      "2052  2053  [0.5030495, 0.41761094, 0.0, 0.0, 0.0, 0.0, 0....\n",
-      "2053  2054  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...\n",
-      "2054  2055  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...\n",
-      "2055  2056  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...\n",
-      "        ID                                          Histogram\n",
-      "2051  2052  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...\n",
-      "2052  2053  [0.041315034, 0.004804074, 0.003843259, 0.0057...\n",
-      "2053  2054  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...\n",
-      "2054  2055  [0.0, 0.0, 0.0, 0.0, 0.0007018793, 0.006316913...\n",
-      "2055  2056  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0038390239, 0.0665...\n",
-      "        ID                                               Path\n",
-      "2051  2052  C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...\n",
-      "2052  2053  C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...\n",
-      "2053  2054  C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...\n",
-      "2054  2055  C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...\n",
-      "2055  2056  C:\\Users\\timsa\\Desktop\\Daten_Joschua\\data\\imag...\n",
-      "        ID                                      Average_Color  Brightness  \\\n",
-      "2051  2052  [130.98166666666665, 165.39666666666668, 173.4...  156.016667   \n",
-      "2052  2053  [40.61055555555556, 45.284166666666664, 45.523...   43.907222   \n",
-      "2053  2054  [127.42722222222223, 175.6822222222222, 233.82...  167.870556   \n",
-      "2054  2055  [193.6175, 204.1461111111111, 214.69861111111112]  202.188611   \n",
-      "2055  2056  [106.96555555555555, 179.19583333333333, 201.6...  160.155556   \n",
-      "\n",
-      "                                            Average_HSV    Resolution  \\\n",
-      "2051  [86.34444444444445, 90.84944444444444, 183.989...  (2471, 3103)   \n",
-      "2052   [74.50055555555555, 174.9025, 64.83027777777778]  (3950, 4937)   \n",
-      "2053  [107.13111111111111, 116.85527777777777, 233.8...  (4032, 3024)   \n",
-      "2054   [104.32333333333334, 26.725, 215.32611111111112]  (5472, 3648)   \n",
-      "2055  [90.37222222222222, 134.98416666666665, 203.62...  (5999, 3876)   \n",
-      "\n",
-      "           DPI  File_Size File_Type Metadata  \n",
-      "2051  (72, 72)    2201212      .jpg       {}  \n",
-      "2052  (72, 72)    4932275      .jpg       {}  \n",
-      "2053  (72, 72)    1691620      .jpg       {}  \n",
-      "2054  (72, 72)     660767      .jpg       {}  \n",
-      "2055  (72, 72)    3313420      .jpg       {}  \n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df_rgb.tail())\n",
-    "print(df_hsv.tail())\n",
-    "print(df_paths.tail())\n",
-    "print(df_other_data.tail())"
+    "# Load pickles\n",
+    "rgb_df = pd.read_pickle(\"RGB_Hist.pkl\")\n",
+    "hsv_df = pd.read_pickle(\"HSV_Hist.pkl\")\n",
+    "embedding_df = pd.read_pickle(\"Embedding.pkl\")\n",
+    "path_df = pd.read_pickle(\"Path.pkl\")\n",
+    "other_data_df = pd.read_pickle(\"Other_data.pkl\")\n",
+    "# len(rgb_df)\n",
+    "# first_histogram_length = len(embedding_df.iloc[0]['Embedding'])\n",
+    "# first_histogram_length\n",
+    "# print(rgb_df.tail())\n",
+    "# print(hsv_df.tail())\n",
+    "# print(path_df.tail())\n",
+    "# print(other_data_df.tail())"
    ]
   },
   {
